--- a/templates/blocks/header.html
+++ b/templates/blocks/header.html
@@ -19,7 +19,7 @@
       {% if show_title %}
       <div
         class="intro-heading"
-        data-field-string="heading"
+        data-field-string="title"
       >{{ title }}</div>
       {% endif %}
       {% if show_button %}
