--- a/templates/blocks/navigation.html
+++ b/templates/blocks/navigation.html
@@ -39,8 +39,7 @@
   </div>
   <!-- /.container-fluid -->
   {% if style.navbar.show_overlay %}
-  <div class="overlay"></div>
-  {% endif %}
+  <div class="overlay"></div>{% endif %}
 </nav>
 
 <!-- Theme CSS -->
