--- a/templates/blocks/navigation.html
+++ b/templates/blocks/navigation.html
@@ -37,9 +37,9 @@
     </div>
     <!-- /.navbar-collapse -->
   </div>
-  <!-- /.container-fluid -->
-  {% if style.navbar.show_overlay %}
-  <div class="overlay"></div>{% endif %}
+  <!-- /.container-fluid -->{% if style.navbar.show_overlay %}
+  <div class="overlay"></div>
+  {% endif %}
 </nav>
 
 <!-- Theme CSS -->
