--- a/templates/blocks/services.html
+++ b/templates/blocks/services.html
@@ -19,7 +19,7 @@
           <span
             class="fa-stack fa-4x"
             data-field-string-ui-widget-icon="items[{{loop.index0}}].icon"
-            data-placement="top"
+            data-placement="center"
           >
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-{{ item.icon }} fa-stack-1x fa-inverse"></i>
