--- a/templates/page.html
+++ b/templates/page.html
@@ -280,6 +280,7 @@
 <script>
   // Agency Theme JavaScript
   (function($) {
+    console.log('theme script')
     "use strict"; // Start of use strict
     
     // jQuery for page scrolling feature - requires jQuery Easing plugin
