--- a/templates/blocks/clients.html
+++ b/templates/blocks/clients.html
@@ -24,6 +24,6 @@
 <style>
 /* Block */
 #{{ block_id }} {
-  background-color: {{ style.block.bg_color }};
+  background-color: {{ block.style.block.bg_color }};
 }
 </style>
