--- a/templates/blocks/header.html
+++ b/templates/blocks/header.html
@@ -2,7 +2,7 @@
 <header
   id="{{block_id}}"
   class="{{template_id}} is-relative"
-  data-field-string-file="image"
+  data-field-string-file="block.image"
   data-placement="top"
   data-offset-top="210"
   data-hide-arrow="true"
