--- a/templates/blocks/header.html
+++ b/templates/blocks/header.html
@@ -40,7 +40,7 @@
 
 <!-- Theme CSS -->
 <style>
-#{{template_id}} {
+#{{block_id}} {
   color: white;
   background-image: url('../img/header-bg.jpg');
   background-repeat: no-repeat;
@@ -54,20 +54,20 @@
   text-align: center;
   position: relative;
 }
-#{{template_id}} .intro-text {
+#{{block_id}} .intro-text {
   padding-top: 100px;
   padding-bottom: 50px;
   position: relative;
   z-index: 1;
 }
-#{{template_id}} .intro-text .intro-lead-in {
+#{{block_id}} .intro-text .intro-lead-in {
   font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: italic;
   font-size: 22px;
   line-height: 22px;
   margin-bottom: 25px;
 }
-#{{template_id}} .intro-text .intro-heading {
+#{{block_id}} .intro-text .intro-heading {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -75,7 +75,7 @@
   line-height: 50px;
   margin-bottom: 25px;
 }
-#{{template_id}} .overlay {
+#{{block_id}} .overlay {
   background-color: #000000;
   height: 100%;
   left: 0;
@@ -85,21 +85,21 @@
   width: 100%;
 }
 @media (min-width: 768px) {
-  #{{template_id}} {
+  #{{block_id}} {
     
   }
-  #{{template_id}} .intro-text {
+  #{{block_id}} .intro-text {
     padding-top: 300px;
     padding-bottom: 200px;
   }
-  #{{template_id}} .intro-text .intro-lead-in {
+  #{{block_id}} .intro-text .intro-lead-in {
     font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-style: italic;
     font-size: 40px;
     line-height: 40px;
     margin-bottom: 25px;
   }
-  #{{template_id}} .intro-text .intro-heading {
+  #{{block_id}} .intro-text .intro-heading {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 700;
