--- a/templates/blocks/services.html
+++ b/templates/blocks/services.html
@@ -6,15 +6,15 @@
         <h2
           class="section-heading"
           data-field-string="heading"
-        >{{heading}}</h2>
+        >{{block.heading}}</h2>
         <h3
           class="section-subheading"
           data-field-string="sub_heading"
-        >{{sub_heading}}</h3>
+        >{{block.sub_heading}}</h3>
       </div>
     </div>
     <div class="row text-center" data-field-array="items">
-      {% for item in items %}
+      {% for item in block.items %}
         <div class="col-md-4" data-field-array-item>
           <span
             class="fa-stack fa-4x"
@@ -48,62 +48,55 @@
 
 <!-- Style CSS -->
 <style>
-  /* Base */
-  #{{block_id}} {
-    color: {{ style.base.text_color }};
-    {% if style.base.padding_top >= 0 %}
-    padding-top: {{ style.base.padding_top }}px;
-    {% endif %}
-    {% if style.base.padding_bottom >= 0 %}
-    padding-bottom: {{ style.base.padding_bottom }}px;
-    {% endif %}
-  }
-  #{{block_id}} h1, #{{block_id}} h2, #{{block_id}} h3, #{{block_id}} h4, #{{block_id}} h5, #{{block_id}} h6 {
-    color: {{ style.base.title_text_color }};
-  }
-  #{{block_id}} h3.section-subheading {
-    color: {{ style.base.subtitle_text_color }};
-  }
-  #{{block_id}} p {
-    color: {{ style.base.text_color }};
-  }
-  #{{block_id}} a {
-    color: {{ style.base.link_text_color }};
-  }
-  #{{block_id}} a:hover,
-  #{{block_id}} a:focus,
-  #{{block_id}} a:active {
-    color: {{ style.base.link_hover_text_color }};
-  }
-  #{{block_id}} .btn-primary,
-  #{{block_id}} .btn-primary:hover,
-  #{{block_id}} .btn-primary:focus,
-  #{{block_id}} .btn-primary:active {
-    background-color: {{ style.base.primary_color }};
-    border-color: {{ style.base.primary_color }};
-  }
-  #{{block_id}} .text-primary {
-    color: {{ style.base.primary_color }};
-  }
-  #{{block_id}} ::selection {
-    color: {{ style.base.selection_text_color }};
-    background: {{ style.base.selection_bg_color }};
-  }
-  
-  /* Block */
-  #{{block_id}} {
-    background-color: {{ style.block.bg_color }};
-    {% if style.block.padding_top >= 0 %}
-    padding-top: {{ style.block.padding_top }}px;
-    {% endif %}
-    {% if style.block.padding_bottom >= 0 %}
-    padding-bottom: {{ style.block.padding_bottom }}px;
-    {% endif %}
-  }
-  {% if style.block.icon_bg_color %}
+/* Block */
+#{{block_id}} {
+  background-color: {{ block.style.block.bg_color }};
+  padding-top: {{ style.block.padding_top }}px;
+  padding-bottom: {{ style.block.padding_bottom }}px;
+}
+{% if block.style.block.icon_bg_color %}
   #{{block_id}} .text-primary { color: {{ style.block.icon_bg_color }}; }
-  {% endif %}
-  {% if style.block.icon_color %}
+{% endif %}
+{% if block.style.block.icon_color %}
   #{{block_id}} .fa-inverse { color: {{ style.block.icon_color }}; }
-  {% endif %}
+{% endif %}
+  
+/* Base */
+#{{block_id}} {
+  background-color: {{ block.style.block.bg_color }};
+  color: {{ block.style.base.text_color }};
+  padding-top: {{ block.style.base.padding_top }}px;
+  padding-bottom: {{ block.style.base.padding_bottom }}px;
+}
+#{{block_id}} h1, #{{block_id}} h2, #{{block_id}} h3, #{{block_id}} h4, #{{block_id}} h5, #{{block_id}} h6 {
+  color: {{ block.style.base.title_text_color }};
+}
+#{{block_id}} h3.section-subheading {
+  color: {{ block.style.base.subtitle_text_color }};
+}
+#{{block_id}} p {
+  color: {{ block.style.base.text_color }};
+}
+#{{block_id}} a {
+  color: {{ block.style.base.link_text_color }};
+}
+#{{block_id}} a:hover,
+#{{block_id}} a:focus,
+#{{block_id}} a:active {
+  color: {{ block.style.base.link_hover_text_color }};
+}
+#{{block_id}} .btn-primary,
+#{{block_id}} .btn-primary:hover,
+#{{block_id}} .btn-primary:focus,
+#{{block_id}} .btn-primary:active {
+  background-color: {{ block.style.base.primary_color }};
+  border-color: {{ block.style.base.primary_color }};
+}
+#{{block_id}} .text-primary {
+  color: {{ block.style.base.primary_color }};
+}
+#{{block_id}} ::selection {
+  color: {{ block.style.base.selection_text_color }};
+  background: {{ block.style.base.selection_bg_color }};
+}
 </style>
