--- a/templates/blocks/services.html
+++ b/templates/blocks/services.html
@@ -51,8 +51,8 @@
 /* Block */
 #{{block_id}} {
   background-color: {{ block.style.block.bg_color }};
-  padding-top: {{ style.block.padding_top }}px;
-  padding-bottom: {{ style.block.padding_bottom }}px;
+  padding-top: {{ block.style.block.padding_top }}px;
+  padding-bottom: {{ block.style.block.padding_bottom }}px;
 }
 #{{block_id}} .text-primary { color: {{ block.style.block.icon_bg_color }}; }
 #{{block_id}} .fa-inverse { color: {{ block.style.block.icon_color }}; }
