--- a/templates/blocks/about.html
+++ b/templates/blocks/about.html
@@ -6,17 +6,17 @@
         <h2
           class="section-heading"
           data-field-string="heading"
-        >{{heading}}</h2>
+        >{{block.heading}}</h2>
         <h3
           class="section-subheading"
           data-field-string="sub_heading"
-        >{{sub_heading}}</h3>
+        >{{block.sub_heading}}</h3>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-12">
         <ul class="timeline" data-field-array="items">
-          {% for item in items %}
+          {% for item in block.items %}
           <li{% if loop.index0 % 2 === 1 %} class="timeline-inverted" {% endif %} data-field-array-item>
             <div class="timeline-image">
             	<img
@@ -233,16 +233,12 @@
 <!-- Style CSS -->
 <style>
 #{{block_id}} {
-  background-color: {{ style.block.bg_color }};
-  {% if style.block.padding_top >= 0 %}
-  padding-top: {{ style.block.padding_top }}px;
-  {% endif %}
-  {% if style.block.padding_bottom >= 0 %}
-  padding-bottom: {{ style.block.padding_bottom }}px;
-  {% endif %}
+  background-color: {{ block.style.block.bg_color }};
+  padding-top: {{ block.style.block.padding_top }}px;
+  padding-bottom: {{ block.style.block.padding_bottom }}px;
 }
 #{{block_id}} .timeline > li .timeline-image {
-  background-color: {{ style.block.image_bg_color }};
-  border-color: {{ style.block.image_border_color }};
+  background-color: {{ block.style.block.image_bg_color }};
+  border-color: {{ block.style.block.image_border_color }};
 }
 </style>
