--- a/templates/blocks/team.html
+++ b/templates/blocks/team.html
@@ -6,15 +6,15 @@
         <h2
           class="section-heading"
           data-field-string="heading"
-        >{{heading}}</h2>
+        >{{block.heading}}</h2>
         <h3
           class="section-subheading text-muted"
           data-field-string="sub_heading"
-        >{{sub_heading}}</h3>
+        >{{block.sub_heading}}</h3>
       </div>
     </div>
     <div class="row clearfix" data-field-array="team">
-      {% for item in team %}
+      {% for item in block.team %}
       <div class="col-sm-4">
         <div class="team-member" data-field-array-item>
           <img
@@ -107,13 +107,13 @@
 <style>
 /* Team */
 #{{block_id}} {
-  background-color: {{ style.block.bg_color }};
-  padding-top: {{ style.block.padding_top }}px;
-  padding-bottom: {{ style.block.padding_bottom }}px;
+  background-color: {{ block.style.block.bg_color }};
+  padding-top: {{ block.style.block.padding_top }}px;
+  padding-bottom: {{ block.style.block.padding_bottom }}px;
 }
 #{{block_id}} ul.social-buttons li a:hover,
 #{{block_id}} ul.social-buttons li a:focus,
 #{{block_id}} ul.social-buttons li a:active {
-  background-color: {{ style.block.social_links_hover_bg_color }};
+  background-color: {{ block.style.block.social_links_hover_bg_color }};
 }
 </style>
