--- a/templates/blocks/team.html
+++ b/templates/blocks/team.html
@@ -54,7 +54,7 @@
           class="large text-muted"
           data-field-text="text"
           data-toolbar-buttons="['bold', 'italic', 'underline', 'anchor']"
-        >{{ text }}</p>
+        >{{ block.text }}</p>
       </div>
     </div>
   </div>
