--- a/templates/blocks/contact.html
+++ b/templates/blocks/contact.html
@@ -7,39 +7,39 @@
         	class="section-heading"
         	data-field-string="heading"
         	data-toolbar-buttons="['bold', 'italic', 'underline', 'anchor']"
-        >{{heading}}</h2>
+        >{{block.heading}}</h2>
         <h3
         	class="section-subheading"
         	data-field-string="sub_heading"
         	data-toolbar-buttons="['bold', 'italic', 'underline', 'anchor']"
-        >{{sub_heading}}</h3>
+        >{{block.sub_heading}}</h3>
 	    </div>
 	  </div>
 	  <div class="row">
 	    <div class="col-lg-12">
 	      <form name="sentMessage" id="contactForm" novalidate>
 	        <div class="row">
-	          <div class="{% if show_name_field === false and show_email_field === false and show_phone_field === false %}{% else %}col-md-6{% endif %}">
-              {% if show_name_field %}
+	          <div class="{% if block.show_name_field === false and block.show_email_field === false and block.show_phone_field === false %}{% else %}col-md-6{% endif %}">
+              {% if block.show_name_field %}
               <div class="control-group form-group">
                 <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
                 <p class="help-block text-danger"></p>
               </div>
               {% endif %}
-              {% if show_email_field %}
+              {% if block.show_email_field %}
               <div class="control-group form-group">
                 <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
                 <p class="help-block text-danger"></p>
               </div>
               {% endif %}
-              {% if show_phone_field %}
+              {% if block.show_phone_field %}
               <div class="control-group form-group">
                 <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
                 <p class="help-block text-danger"></p>
               </div>
               {% endif %}
 	          </div>
-	          <div class="{% if show_name_field === false and show_email_field === false and show_phone_field === false %}col-md-12{% else %}col-md-6{% endif %}">
+	          <div class="{% if block.show_name_field === false and block.show_email_field === false and block.show_phone_field === false %}col-md-12{% else %}col-md-6{% endif %}">
               <div class="control-group form-group">
                 <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
                 <p class="help-block text-danger"></p>
@@ -53,7 +53,7 @@
               	data-loading-text="Sending..."
               	class="btn btn-xl"
               	data-field-string="submit_button_text"
-          		>{{ submit_button_text }}</button>
+          		>{{ block.submit_button_text }}</button>
 	          </div>
 	        </div>
 	      </form>
@@ -125,48 +125,48 @@
 <style>
 /* Block */
 #contact {
-  background-color: {{ style.block.bg_color }};
-  padding-top: {{ style.block.padding_top }}px;
-  padding-bottom: {{ style.block.padding_bottom }}px;
-  {% if style.block.show_image %}
-  background-image: url('{{ style.block.image }}');
+  background-color: {{ block.style.block.bg_color }};
+  padding-top: {{ block.style.block.padding_top }}px;
+  padding-bottom: {{ block.style.block.padding_bottom }}px;
+  {% if block.style.block.show_image %}
+    background-image: url('{{ block.style.block.image }}');
   {% endif %}
 }
 #contact .form-control:focus {
-  border-color: {{ style.base.primary_color }};
+  border-color: {{ block.style.base.primary_color }};
 }
 
 /* Base */
 #contact h1, #contact h2, #contact h3, #contact h4, #contact h5, #contact h6 {
-  color: {{ style.base.title_text_color }};
+  color: {{ block.style.base.title_text_color }};
 }
 #contact h3.section-subheading {
-  color: {{ style.base.subtitle_text_color }};
+  color: {{ block.style.base.subtitle_text_color }};
 }
 #contact p {
-  color: {{ style.base.text_color }};
+  color: {{ block.style.base.text_color }};
 }
 #contact a {
-  color: {{ style.base.link_text_color }};
+  color: {{ block.style.base.link_text_color }};
 }
 #contact a:hover,
 #contact a:focus,
 #contact a:active {
-  color: {{ style.base.link_hover_text_color }};
+  color: {{ block.style.base.link_hover_text_color }};
 }
 #contact .btn-primary,
 #contact .btn-primary:hover,
 #contact .btn-primary:focus,
 #contact .btn-primary:active {
-  background-color: {{ style.base.primary_color }};
-  border-color: {{ style.base.primary_color }};
+  background-color: {{ block.style.base.primary_color }};
+  border-color: {{ block.style.base.primary_color }};
 }
 #contact .text-primary {
-  color: {{ style.base.primary_text_color }};
+  color: {{ block.style.base.primary_text_color }};
 }
 #contact ::selection {
-  color: {{ style.base.selection_text_color }};
-  background: {{ style.base.selection_bg_color }};
+  color: {{ block.style.base.selection_text_color }};
+  background: {{ block.style.base.selection_bg_color }};
 }
 </style>
 
