--- a/templates/blocks/decoration.html
+++ b/templates/blocks/decoration.html
@@ -1,7 +1,7 @@
 <div
 	id="{{block_id}}"
 	class="decoration"
-	style="background-image: url({{image}})"
+	style="background-image: url({{block.image}})"
 ></div>
 
 <!-- Theme CSS -->
