--- a/templates/page.html
+++ b/templates/page.html
@@ -255,6 +255,12 @@
       color: {{ theme.colors.selection_text_color }};
       background: {{ theme.colors.selection_bg_color }};
     }
+    @media (min-width: 768px) {
+      section {
+        padding-top: {{ theme.block.padding_top }};px;
+        padding-bottom: {{ theme.block.padding_top }};px;
+      }
+    }
   </style>
   
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
