--- a/templates/page.html
+++ b/templates/page.html
@@ -258,7 +258,7 @@
     @media (min-width: 768px) {
       section {
         padding-top: {{ theme.block.padding_top }};px;
-        padding-bottom: {{ theme.block.padding_top }};px;
+        padding-bottom: {{ theme.block.padding_bottom }};px;
       }
     }
   </style>
