--- a/templates/page.html
+++ b/templates/page.html
@@ -277,7 +277,7 @@
   <![endif]-->
 </head>
 <body id="page-top" class="index">
-<!-- content -->
+<!-- content -->dd
 
 <!-- jQuery -->
 <script src="https://blackrockdigital.github.io/startbootstrap-agency/vendor/jquery/jquery.min.js"></script>
