--- a/templates/page.html
+++ b/templates/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+  testar
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -277,7 +277,7 @@
   <![endif]-->
 </head>
 <body id="page-top" class="index">
-<!-- content -->dd
+<!-- content -->
 
 <!-- jQuery -->
 <script src="https://blackrockdigital.github.io/startbootstrap-agency/vendor/jquery/jquery.min.js"></script>
