--- a/templates/page.html
+++ b/templates/page.html
@@ -181,11 +181,9 @@
       color: #fed136;
       background-color: white;
     }
-    /*
-    section {
+    .block {
       padding: 100px 0;
     }
-    */
     section .section-heading {
       font-size: 40px;
       margin-top: 0;
@@ -199,13 +197,11 @@
       font-weight: 400;
       margin-bottom: 75px;
     }
-    /*
     @media (min-width: 768px) {
-      section {
+      .block {
         padding: 150px 0;
       }
     }
-    */
   </style>
   
   <!-- Style CSS -->
@@ -238,14 +234,12 @@
       color: {{ theme.colors.link_hover_text_color }};
     }
     /* Global */
-    /*
     @media (min-width: 768px) {
-      section {
+      .block {
         padding-top: {{ theme.block.padding_top }};px;
         padding-bottom: {{ theme.block.padding_bottom }};px;
       }
     }
-    */
     /* Buttons */
     .btn-primary,
     .btn-primary:hover,
