--- a/templates/blocks/about.html
+++ b/templates/blocks/about.html
@@ -1,5 +1,5 @@
 <!-- About Section -->
-<section id="{{block_id}}" class="{{template_id}}">
+<section id="{{block_id}}" class="{{template_id}} block">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
