--- a/templates/blocks/contact.html
+++ b/templates/blocks/contact.html
@@ -1,5 +1,5 @@
 <!-- Contact Section -->
-<section id="{{template_id}}">
+<section id="{{template_id}}" class="block">
 	<div class="container">
 	  <div class="row">
 	    <div class="col-lg-12 text-center">
