--- a/templates/blocks/portfolio.html
+++ b/templates/blocks/portfolio.html
@@ -1,5 +1,5 @@
 <!-- Portfolio Grid Section -->
-<section id="{{block_id}}" class="{{template_id}}">
+<section id="{{block_id}}" class="{{template_id}} block">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
