--- a/templates/blocks/header.html
+++ b/templates/blocks/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <header
   id="{{block_id}}"
-  class="{{template_id}} is-relative"
+  class="{{template_id}} klar-outline"
   data-field-string-file="image"
   data-placement="top"
   data-offset-top="210"
