--- a/templates/blocks/navigation.html
+++ b/templates/blocks/navigation.html
@@ -48,6 +48,7 @@
     background-color: #222222;
     border-color: transparent;
     margin-bottom: 0;
+    top: 0;
   }
   .navbar-custom .container {
     position: relative;
