--- a/templates/blocks/navigation.html
+++ b/templates/blocks/navigation.html
@@ -161,6 +161,9 @@
     .navbar-custom + .block {
       margin-top: {{ block.style.navbar.margin_top_next_block }}px;
     }
+    [data-template-id="navigation"] + .klar-block {
+      margin-top: {{ block.style.navbar.margin_top_next_block }}px;
+    }
   } 
   .navbar-custom.affix {
     background-color: {{ block.style.navbar.bg_color }};
