--- a/templates/blocks/navigation.html
+++ b/templates/blocks/navigation.html
@@ -161,6 +161,7 @@
     .navbar-custom + .block {
       margin-top: {{ block.style.navbar.margin_top_next_block }}px;
     }
+    /* For editor */
     [data-template-id="navigation"] + .klar-block {
       margin-top: {{ block.style.navbar.margin_top_next_block }}px;
     }
