--- a/templates/blocks/navigation.html
+++ b/templates/blocks/navigation.html
@@ -158,7 +158,7 @@
       padding-bottom: {{ block.style.navbar.padding_bottom }}px;
     }
     /* Margin top next block */
-    .navbar-custom + .block {
+    .navbar-custom + * {
       margin-top: {{ block.style.navbar.margin_top_next_block }}px;
     }
     /* For editor */
