--- a/templates/blocks/portfolio.html
+++ b/templates/blocks/portfolio.html
@@ -30,7 +30,7 @@
             </a>
             <div class="portfolio-caption">
               <h4
-                data-field-string="items[{{loop.index0}}].heading"
+                data-field-string="items[{{loop.index0}}].client"
               >{{ item.client }}</h4>
               <p
                 data-field-string="items[{{loop.index0}}].category"
