--- a/templates/blocks/team.html
+++ b/templates/blocks/team.html
@@ -37,8 +37,8 @@
               <li>
                 <a
                   href="{{ link_item.link }}"
-                  data-field-string-ui-widget-icon="item.social_links[{{loop.index0}}].icon"
-                  data-field-string-format-uri="item.social_links[{{loop.index0}}].link"
+                  data-field-string-ui-widget-icon="team.social_links[{{loop.index0}}].icon"
+                  data-field-string-format-uri="team.social_links[{{loop.index0}}].link"
                   data-placement="bottom"
                 ><i class="fa fa-{{ link_item.icon }}"></i></a>
               </li>
