--- a/templates/blocks/team.html
+++ b/templates/blocks/team.html
@@ -33,12 +33,13 @@
             data-toolbar-buttons="['bold', 'italic', 'underline', 'anchor']"
           >{{ item.text }}</p>
           <ul class="list-inline social-buttons">
+            {% set parent_index_0 = loop.index0 %}
             {% for link_item in item.social_links %}
               <li>
                 <a
                   href="{{ link_item.link }}"
-                  data-field-string-ui-widget-icon="team.social_links[{{loop.index0}}].icon"
-                  data-field-string-format-uri="team.social_links[{{loop.index0}}].link"
+                  data-field-string-ui-widget-icon="team[{{parent_index_0}}].social_links[{{loop.index0}}].icon"
+                  data-field-string-format-uri="team[{{parent_index_0}}].social_links[{{loop.index0}}].link"
                   data-placement="bottom"
                 ><i class="fa fa-{{ link_item.icon }}"></i></a>
               </li>
