--- a/templates/page.html
+++ b/templates/page.html
@@ -236,8 +236,8 @@
     /* Global */
     @media (min-width: 768px) {
       .block {
-        padding-top: {{ theme.block.padding_top }};px;
-        padding-bottom: {{ theme.block.padding_bottom }};px;
+        padding-top: {{ theme.block.padding_top }}px;
+        padding-bottom: {{ theme.block.padding_bottom }}px;
       }
     }
     /* Buttons */
