--- a/templates/blocks/team.html
+++ b/templates/blocks/team.html
@@ -28,7 +28,6 @@
             data-field-string="team[{{loop.index0}}].heading"
           >{{ item.heading }}</h4>
           <p
-            class="text-muted"
             data-field-string="team[{{loop.index0}}].text"
             data-toolbar-buttons="['bold', 'italic', 'underline', 'anchor']"
           >{{ item.text }}</p>
@@ -52,7 +51,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p
-          class="large text-muted"
+          class="large"
           data-field-text="text"
           data-toolbar-buttons="['bold', 'italic', 'underline', 'anchor']"
         >{{ block.text }}</p>
