--- a/templates/blocks/contact.html
+++ b/templates/blocks/contact.html
@@ -139,8 +139,8 @@
 #{{block_id}} .btn-xl:hover,
 #{{block_id}} .btn-xl:focus,
 #{{block_id}} .btn-xl:active {
-  background-color: {{ block.style.base.primary_color }};
-  border-color: {{ block.style.base.primary_color }};
+  background-color: {{ block.style.button_bg_color }};
+  border-color: {{ block.style.button_bg_color }};
   color: {{ block.style.button_text_color }};
 }
 
