--- a/templates/blocks/contact.html
+++ b/templates/blocks/contact.html
@@ -135,10 +135,10 @@
 #contact .form-control:focus {
   border-color: {{ block.style.base.primary_color }};
 }
-#{{block_id}} .btn-xl,
-#{{block_id}} .btn-xl:hover,
-#{{block_id}} .btn-xl:focus,
-#{{block_id}} .btn-xl:active {
+#contact .btn-xl,
+#contact .btn-xl:hover,
+#contact .btn-xl:focus,
+#contact .btn-xl:active {
   background-color: {{ block.style.button_bg_color }};
   border-color: {{ block.style.button_bg_color }};
   color: {{ block.style.button_text_color }};
