--- a/templates/blocks/contact.html
+++ b/templates/blocks/contact.html
@@ -139,9 +139,9 @@
 #contact .btn-xl:hover,
 #contact .btn-xl:focus,
 #contact .btn-xl:active {
-  background-color: {{ block.style.button_bg_color }};
-  border-color: {{ block.style.button_bg_color }};
-  color: {{ block.style.button_text_color }};
+  background-color: {{ block.style.block.button_bg_color }};
+  border-color: {{ block.style.block.button_bg_color }};
+  color: {{ block.style.block.button_text_color }};
 }
 
 /* Base */
