--- a/templates/blocks/contact.html
+++ b/templates/blocks/contact.html
@@ -151,6 +151,21 @@
 #contact .section-subheading {
   color: {{ block.style.base.subtitle_text_color }};
 }
+#contact p {
+  color: {{ block.style.base.text_color }};
+}
+#contact a {
+  color: {{ block.style.base.link_text_color }};
+}
+#contact a:hover,
+#contact a:focus,
+#contact a:active {
+  color: {{ block.style.base.link_hover_text_color }};
+}
+#contact ::selection {
+  color: {{ block.style.base.selection_text_color }};
+  background: {{ block.style.base.selection_bg_color }};
+}
 </style>
 
 <!-- Contact Form JavaScript -->
