--- a/templates/blocks/contact.html
+++ b/templates/blocks/contact.html
@@ -151,6 +151,9 @@
 #contact .section-subheading {
   color: {{ block.style.base.subtitle_text_color }};
 }
+#contact .form-control:focus {
+    border-color: {{ block.style.block.button_bg_color }};
+}
 #contact ::selection {
   background: {{ block.style.base.selection_bg_color }};
   color: {{ block.style.base.selection_text_color }};
