--- a/templates/blocks/services.html
+++ b/templates/blocks/services.html
@@ -59,37 +59,37 @@
 
 /* Base */
 #{{block_id}} {
-  color: {{ block.style.base.text_color }};
+  color: {{ block.style.block.base.text_color }};
 }
 #{{block_id}} h1, #{{block_id}} h2, #{{block_id}} h3, #{{block_id}} h4, #{{block_id}} h5, #{{block_id}} h6 {
-  color: {{ block.style.base.title_text_color }};
+  color: {{ block.style.block.base.title_text_color }};
 }
 #{{block_id}} h3.section-subheading {
-  color: {{ block.style.base.subtitle_text_color }};
+  color: {{ block.style.block.base.subtitle_text_color }};
 }
 #{{block_id}} p {
-  color: {{ block.style.base.text_color }};
+  color: {{ block.style.block.base.text_color }};
 }
 #{{block_id}} a {
-  color: {{ block.style.base.link_text_color }};
+  color: {{ block.style.block.base.link_text_color }};
 }
 #{{block_id}} a:hover,
 #{{block_id}} a:focus,
 #{{block_id}} a:active {
-  color: {{ block.style.base.link_hover_text_color }};
+  color: {{ block.style.block.base.link_hover_text_color }};
 }
 #{{block_id}} .btn-primary,
 #{{block_id}} .btn-primary:hover,
 #{{block_id}} .btn-primary:focus,
 #{{block_id}} .btn-primary:active {
-  background-color: {{ block.style.base.primary_color }};
-  border-color: {{ block.style.base.primary_color }};
+  background-color: {{ block.style.block.base.primary_color }};
+  border-color: {{ block.style.block.base.primary_color }};
 }
 #{{block_id}} .text-primary {
-  color: {{ block.style.base.primary_color }};
+  color: {{ block.style.block.base.primary_color }};
 }
 #{{block_id}} ::selection {
-  color: {{ block.style.base.selection_text_color }};
-  background: {{ block.style.base.selection_bg_color }};
+  color: {{ block.style.block.base.selection_text_color }};
+  background: {{ block.style.block.base.selection_bg_color }};
 }
 </style>
