--- a/templates/blocks/services.html
+++ b/templates/blocks/services.html
@@ -49,16 +49,12 @@
 <!-- Style CSS -->
 <style>
 /* Block */
-#{{block_id}} {
-  background-color: {{ block.style.block.bg_color }};
-  padding-top: {{ block.style.block.padding_top }}px;
-  padding-bottom: {{ block.style.block.padding_bottom }}px;
-}
 #{{block_id}} .text-primary { color: {{ block.style.block.icon_bg_color }}; }
 #{{block_id}} .fa-inverse { color: {{ block.style.block.icon_color }}; }
 
 /* Base */
 #{{block_id}} {
+  background-color: {{ block.style.base.bg_color }};
   color: {{ block.style.base.text_color }};
 }
 #{{block_id}} h1, #{{block_id}} h2, #{{block_id}} h3, #{{block_id}} h4, #{{block_id}} h5, #{{block_id}} h6 {
@@ -91,5 +87,9 @@
 #{{block_id}} ::selection {
   color: {{ block.style.base.selection_text_color }};
   background: {{ block.style.base.selection_bg_color }};
+}
+#{{block_id}} {
+  padding-top: {{ block.style.base.padding_top }}px;
+  padding-bottom: {{ block.style.base.padding_bottom }}px;
 }
 </style>
